--- a/Laboratory1/app/src/main/res/layout/activity_third.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_third.xml
@@ -16,4 +16,15 @@
         android:text="Three"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:layout_width="349dp"
+        android:layout_height="394dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginRight="26dp"
+        android:layout_marginBottom="167dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
