--- a/Laboratory1/app/src/main/res/layout-land/item_layout.xml
+++ b/Laboratory1/app/src/main/res/layout-land/item_layout.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:id="@+id/thisWrapper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="227dp"
         android:padding="20dp">
 
         <ImageView
@@ -24,11 +24,14 @@
             android:layout_margin="10dp" />
 
         <LinearLayout
-            android:layout_width="268dp"
-            android:layout_height="104dp"
+            android:layout_width="684dp"
+            android:layout_height="188dp"
             android:layout_alignTop="@id/thisImage"
             android:layout_alignBottom="@id/thisImage"
-            android:layout_marginBottom="-32dp"
+            android:layout_marginStart="-11dp"
+            android:layout_marginLeft="-11dp"
+            android:layout_marginTop="-95dp"
+            android:layout_marginBottom="-94dp"
             android:layout_toEndOf="@id/thisImage"
             android:layout_toRightOf="@id/thisImage"
             android:orientation="vertical">
@@ -45,10 +48,11 @@
 
             <TextView
                 android:id="@+id/thisDescription"
-                android:layout_width="247dp"
-                android:layout_height="60dp"
+                android:layout_width="655dp"
+                android:layout_height="59dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginBottom="20dp"
                 android:text="This is a description"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="20sp" />
@@ -57,8 +61,7 @@
                 android:id="@+id/postTime"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="180dp" />
-
+                android:layout_marginLeft="500dp" />
         </LinearLayout>
 
     </RelativeLayout>
