add things to things

--- a/Laboratory1/app/src/main/res/layout/activity_fourth.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_fourth.xml
@@ -10,7 +10,7 @@
         android:id="@+id/genRandomBtn"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="GENERATE RANDOM QUOTE"
+        android:text="GENERATE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,12 +21,16 @@
         android:id="@+id/genQuoteTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="Don't have enough inspiration? Generate a random quote!"
         android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/genRandomBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.331" />
+        app:layout_constraintVertical_bias="0.584" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
