--- a/Laboratory1/app/src/main/res/layout-land/activity_fourth.xml
+++ b/Laboratory1/app/src/main/res/layout-land/activity_fourth.xml
@@ -10,7 +10,7 @@
         android:id="@+id/genRandomBtn"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:text="GENERATE RANDOM QUOTE"
+        android:text="GENERATE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,11 @@
         android:id="@+id/genQuoteTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:gravity="center"
+        android:text="Don't have enough inspiration? Generate a random quote!"
         android:textSize="30dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
