--- a/Laboratory1/app/src/main/res/layout-land/activity_third.xml
+++ b/Laboratory1/app/src/main/res/layout-land/activity_third.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/goToListBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
         android:text="Post"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,10 +25,10 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintHorizontal_bias="0.227"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setAvatar"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintVertical_bias="0.082" />
 
     <ImageView
         android:id="@+id/setAvatar"
@@ -43,15 +43,15 @@
 
     <Button
         android:id="@+id/goToMainBtn"
-        android:layout_width="120dp"
-        android:layout_height="47dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:text="  Log out  "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintStart_toEndOf="@+id/goToRandomBtn"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintVertical_bias="0.893" />
 
     <EditText
         android:id="@+id/yourTxtArea"
@@ -69,15 +69,27 @@
 
     <Button
         android:id="@+id/goToRandomBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="47dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:text="Get Inspired"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.038"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.846" />
+        app:layout_constraintVertical_bias="0.893" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="VIEW"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/goToListBtn"
+        app:layout_constraintHorizontal_bias="0.986"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/yourTxtArea"
+        app:layout_constraintVertical_bias="0.05" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
