--- a/Laboratory1/app/src/main/res/drawable/left_diagonal_line.xml
+++ b/Laboratory1/app/src/main/res/drawable/left_diagonal_line.xml
@@ -4,10 +4,10 @@
     android:toDegrees="45">
 
     <shape android:shape="line">
-        <solid android:color="@color/purple_700" />
+        <solid android:color="@color/red_A700" />
         <stroke
             android:width="4dp"
-            android:color="@color/purple_700" />
+            android:color="@color/red_A700" />
     </shape>
 
 </rotate>
