--- a/Laboratory1/app/src/main/res/layout/activity_second.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_second.xml
@@ -7,22 +7,39 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".SecondActivity">
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/dd" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="match_parent"
+        android:layout_height="234dp"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="175dp"
+        android:layout_marginBottom="266dp"
+        app:srcCompat="@drawable/untitled" />
+
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="287dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="117dp"
-        android:layout_marginLeft="117dp"
-        android:layout_marginTop="178dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginRight="107dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginRight="57dp"
         android:text="Tic Tac Toe"
         android:textSize="36sp"
+        android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,18 +48,19 @@ tools:context=".SecondActivity">
     <Button
         android:id="@+id/startNewGameButton"
         android:layout_width="wrap_content"
+        android:backgroundTint="@color/grey_700"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="129dp"
-        android:layout_marginLeft="129dp"
+        android:layout_marginStart="126dp"
+        android:layout_marginLeft="126dp"
         android:layout_marginTop="96dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginRight="115dp"
-        android:layout_marginBottom="215dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginRight="118dp"
+        android:layout_marginBottom="35dp"
         android:text="Start New Game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -53,11 +71,12 @@ tools:context=".SecondActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/purple_700"
+        app:itemBackground="@color/blue_grey_700"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"/>
+
 
 </RelativeLayout>
 
