--- a/Laboratory1/app/src/main/res/layout/activity_sixth.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_sixth.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/purple_700"
+        app:itemBackground="@color/blue_grey_700"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/menu_navigation"
