--- a/Laboratory1/app/src/main/res/layout/item_layout_one.xml
+++ b/Laboratory1/app/src/main/res/layout/item_layout_one.xml
@@ -26,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="MindOrks"
         android:layout_marginLeft="8dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -35,7 +34,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textViewUserName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
-        tools:text="MindOrks" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
