--- a/Laboratory1/app/src/main/res/layout/activity_second.xml
+++ b/Laboratory1/app/src/main/res/layout/activity_second.xml
@@ -11,35 +11,46 @@ tools:context=".presenter.game.SecondActivity">
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/dd" />
+        app:srcCompat="@drawable/background_02" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="match_parent"
-        android:layout_height="234dp"
+        android:foregroundGravity="center"
+        android:layout_width="325dp"
+        android:layout_height="237dp"
         android:layout_above="@+id/bottom_navigation"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="175dp"
-        android:layout_marginBottom="266dp"
-        app:srcCompat="@drawable/untitled" />
-
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="287dp"
-        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginRight="57dp"
-        android:text="@string/tic_tac_txt"
-        android:textSize="36sp"
+        android:layout_marginStart="53dp"
+        android:layout_marginLeft="53dp"
+        android:layout_marginTop="191dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
+        android:layout_marginBottom="246dp"
+        app:srcCompat="@drawable/untitled" />
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="124dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView7"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="158dp"
+        android:layout_marginLeft="158dp"
+        android:layout_marginTop="198dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginRight="142dp"
+        android:layout_marginBottom="9dp"
         android:gravity="center"
+        android:text="@string/tic_tac_txt"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
