--- a/Laboratory1/app/src/main/res/menu/menu_navigation.xml
+++ b/Laboratory1/app/src/main/res/menu/menu_navigation.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/posts"
-        android:title="@string/nav_menu_posts"
-        android:icon="@drawable/ic_dashboard"/>
-
-    <item
-        android:id="@+id/randomise"
-        android:title="@string/nav_bar_randomise"
-        android:icon="@drawable/ic_star"/>
-
-    <item
-        android:id="@+id/my_profile"
+        android:id="@+id/my_profile_menu_navigation"
         android:title="@string/nav_bar_my_profile"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_home"
+        app:showAsAction="ifRoom"
+        android:enabled="true"/>
 
     <item
-        android:id="@+id/users"
+        android:id="@+id/posts_menu_navigation"
+        android:title="@string/nav_menu_posts"
+        android:icon="@drawable/ic_dashboard"
+        app:showAsAction="ifRoom"
+        android:enabled="true"/>
+
+    <item
+        android:id="@+id/randomise_menu_navigation"
+        android:title="@string/nav_bar_randomise"
+        android:icon="@drawable/ic_star"
+        app:showAsAction="ifRoom"
+        android:enabled="true"/>
+
+    <item
+        android:id="@+id/users_menu_navigation"
         android:title="@string/nav_menu_users"
-        android:icon="@drawable/ic_user"/>
+        android:icon="@drawable/ic_user"
+        app:showAsAction="ifRoom"
+        android:enabled="true"/>
 
     <item
-        android:id="@+id/games"
+        android:id="@+id/games_menu_navigation"
         android:title="@string/nav_menu_games"
-        android:icon="@drawable/ic_game"/>
+        android:icon="@drawable/ic_game"
+        app:showAsAction="ifRoom"
+        android:enabled="true"/>
 
 </menu>
